--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,16 +1,6 @@
-
-/* nav bar */
-.navbar {
-	overflow: hidden;
-	background-color: #333;
-	display: flex;
-	justify-content: center;
-  }
-  
-.dropdown {
-	float: left;
-	overflow: hidden;
-  }
+html {
+  scroll-behavior: smooth;
+}
   
 .container {
   max-width: 100vw;
@@ -31,82 +21,13 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    padding: 1em;
+    padding: 2em;
     min-width: 0;
     word-wrap: break-word;
     background-color: papayawhip;
     background-clip: border-box;
     border: 3px solid black;
 }
-  
-.dropdown .dropbtn {
-	font-size: 16px;  
-	border: none;
-	outline: none;
-	color: white;
-	padding: 14px 16px;
-	margin: 0;
-	background-color: inherit;
-	font-family: inherit;
-
-  }
-  
-.navbar a:hover, .dropdown:hover {
-	background-color: red;
-  }
-
-.dropbtn {
-	padding: 2%;
-	background-color:red;
-} 
-
-button a {
-	float: none;
-	color: white;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-  }
-
-.dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	
-  }
-ul.nav {
-	list-style-type: none;
-	margin: 0;
-	overflow: hidden;
-	background-color: #99A799;
-	display: flex;
-	justify-content: center;
-  }
-  
-li.nav {
-	  text-align: center;
-	  padding: 1%;
-  }
-
-  
-.dropdown-content a {
-	float: none;
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-  }
-  
-.dropdown-content a:hover {
-	background-color: #ddd;
-  }
-  
-.dropdown:hover .dropdown-content {
-	display: block;
-  }
 
 .header_pic {
 	position: relative;
@@ -117,10 +38,10 @@ li.nav {
 	
 .header_image {	
     background-size: cover;
-	height: 700px;
+	  height: 700px;
     width: 100%;
     position: relative;
-	z-index: -1;
+	  z-index: -1;
 }
 
 .centered {
@@ -156,4 +77,13 @@ h1 {
     float: left;
     margin-right: 2%;
     margin-left: 2%;
+}
+
+a {
+  color: #4c5f6b;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #AD5D4E;
 }
