--- a/countries/nigeria/css/nigeria.css
+++ b/countries/nigeria/css/nigeria.css
@@ -38,10 +38,11 @@ html {
 	
 .header_image {	
     background-size: cover;
-	  height: 700px;
+	  height: 550px;
     width: 100%;
     position: relative;
 	  z-index: -1;
+
 }
 
 .centered {
@@ -55,6 +56,13 @@ html {
   text-shadow: 2px 2px 4px black;
 }
 
+.textleft {
+  text-align: left;
+}
+
+.small {
+  font-size: 15px;
+}
 
 /* body */
 
@@ -72,6 +80,7 @@ body {
 h1 {
 	font-size: 200%;
 }
+
 
 /* images */
 
@@ -212,3 +221,4 @@ img {
   text-shadow: 2px 2px 4px #151515;
 }
 }
+
